Applied experimental fix for MDEV-10259 (mysqld crash with certain statement length and order with Galera and encrypt-tmp-files=1)

https://jira.mariadb.org/browse/MDEV-10259
http://lists.askmonty.org/pipermail/commits/2018-March/012144.html

Fixed a problem in 'my_b_encr_read()' with updating 'read_end' and 'pos_in_file'.